--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
+    "@sentry/node": "^7.21.1",
+    "@sentry/tracing": "^7.21.1",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "0.4.0",
