--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepare-husky": "husky install"
   },
   "dependencies": {
-    "@eshopping/helper-package": "^1.1.0",
+    "@eshopping/helper-package": "^1.2.0",
     "@faker-js/faker": "^7.5.0",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
@@ -37,6 +37,8 @@
     "@sentry/tracing": "^7.21.1",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^4.0.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "0.4.0",
     "class-validator": "^0.13.1",
     "cloudinary": "^1.32.0",
@@ -49,6 +51,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "prettier": "^2.7.1",
+    "redis": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
